# unlight-zwei-game-duel-service

./: .gitignore  Cargo.toml  HostTmp.json  README.md  build.rs  config.test_server.yaml  config.toml  config.yaml  docker-compose.yaml  dockerfile  genTestDeck.go  go.mod  go.sum  main.go  makefile  tools.go
authServer/: check_cred.go  create_cred.go  db_connect.go  get_cred.go  main_init.go  main_process.go
authServer/cmd/: root.go  run.go
data/: ActionCardSet.pbc  ActionCards.csv  status.json
doc/: Data.md  EventPhase.md  gameService.dot  gameService.message.dot  gameService.storemod2.dot  message.md  service.html  service.md  storeMod.md
pkg/cmd/: init.go  run.go
pkg/common/: function.go  system_message.go
pkg/config/: conftemp.go
pkg/natsCli/: client.go
pkg/scriptRunner/: clientFunc.go  resolver.go
pkg/serverCtl/: ADPhase.go  ADPhaseAtkHandle.go  ADPhaseDefHandle.go  ADPhaseHandle.go  BasicFunc.go  BattlePhase.go  Broadcast.go  ChangePhase.go  DrawPhase.go  EventCardSet.go  EventPhase.go  EventPhaseProxyHandle.go  EventPhaseTrigEf.go  InstanceEC.go  MovePhase.go  MovePhaseHandle.go  main_init.go  main_process.go
pkg/serverCtlNoRedis/: Broadcast.go  (+9 more)
proto/: Data.pb.go  Data.proto  Data.validator.pb.go  EventHookPhase.pb.go  EventHookPhase.proto  EventHookPhase.validator.pb.go  StoreMod.pb.go  StoreMod.proto  StoreMod.validator.pb.go  common.pb.go  common.proto  common.validator.pb.go  helperFunc.go  message.pb.go  message.proto  message.validator.pb.go  service.pb.go  service.proto  service.validator.pb.go
src/: main.rs  server_impl.rs
(+30 files in other folders)
