[package]
name = "unlight-zwei-game-duel-service"
version = "0.1.0"
authors = ["steven <stv.chm@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[run]]
name = "ulz_game_duel_service"
path = "src/main.rs"

# [[bin]]
# name = "test-conn"
# path = "src/server_impl/test_cache_conn.rs"

[dependencies]
redis = "0.15.1"
tonic = { path = "A:/Gitrepo/tonic/tonic", features = ["tls"] }
prost = "0.6"
tokio = { version = "0.2", features = ["rt-threaded","rt-core", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"
tower = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.5.6"
rand = "0.7"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.2.0-alpha", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
# Required for wellknown types
prost-types = "0.6"
bytes = "0.5.4"

[build-dependencies]
tonic-build = "0.1.1"
